--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -30,13 +32,12 @@
     "expo-media-library": "^18.2.0",
     "expo-navigation-bar": "^5.0.9",
     "expo-router": "~6.0.8",
+    "expo-speech-recognition": "^3.0.0",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-video-thumbnails": "^10.0.7",
     "expo-web-browser": "~15.0.7",
-    "ffmpeg-kit-react-native": "^6.0.2",
     "lucide-react-native": "^0.544.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
+    "eas-cli": "^16.28.0",
     "typescript": "~5.9.2"
   }
 }
